# basic_mathematical_operations

./: README.md  setup.cfg
src/divide/: division.py
tests/: test_add.py  test_divide.py  test_multiply.py  test_subtract.py
