[metadata]
name = basic_mathematical_operations
version = 1.0.0
author = Numan Farukh
author_email = numanfarukh.work@gmail.com
description = A simple Python package to perform mathematical operations
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/famcodings/basic_mathematical_operations
project_urls =
    Bug Tracker = https://github.com/famcodings/basic_mathematical_operations/-/issues
    repository = https://github.com/famcodings/basic_mathematical_operations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src